--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-theme: jekyll-theme-cayman
+# Name of website
+title: Modular Synth
+author: Dragos Rotaru
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme 
