--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Name of website
 title: Modular Synth
 author: Dragos Rotaru
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme 
